# easy_stat_r

./: .gitignore  404.html  Cargo.toml  TECHNOLOGIES.md  TOP.py  Trunk.toml  common.py  index.html  netlify.toml
.github/workflows/: deploy.yml
assets/: style.css
pages/: 02_相関分析.py  03_カイ２乗検定.py  04_t検定（対応なし）.py  05_t検定（対応あり）.py  06_一要因分散分析（対応なし）.py  07_一要因分散分析（対応あり）.py  08_二要因分散分析（対応なし）.py  09_二要因混合分散分析.py  14_テキストマイニング.py
src/: app.rs  lib.rs  main.rs  state.rs
src/components/: file_upload.rs  footer.rs  guide.rs  header.rs  info_section.rs  mod.rs  sidebar.rs
src/pages/: anova_unified.rs  chi_square.rs  correlation.rs  data_cleaning.rs  eda.rs  factor_analysis.rs  mod.rs  pca.rs  regression.rs  t_test_unified.rs  text_mining.rs
src/utils/: excel_to_polars.rs  mod.rs
