[package]
name = "easy_stat_r"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Web Framework
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"

# Data Processing
# Polars: Wasm optimized configuration
polars = { version = "0.41", default-features = false, features = ["lazy", "csv", "json", "dtype-full"] }

# Excel Support
calamine = { version = "0.26", features = ["dates"] }

# Math & Stats
statrs = "0.17"
nalgebra = "0.33"

# Plotting
plotly = { version = "0.10", features = ["wasm"] }

# Logging
log = "0.4"
wasm-logger = "0.2"

# Fix for Wasm random number generation
getrandom = { version = "0.3", features = ["wasm_js"] }

# Fix for Polars internal usage of hashbrown raw API
hashbrown = { version = "0.14", features = ["raw"] }

# Error handling
anyhow = "1.0"

# JS Interop
js-sys = "0.3"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }

# Web Sys
[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement",
    "FileList",
    "File",
    "FileReader",
    "DomException",
    "Window",
]

